[package]
name = "const-primes"
authors = ["Johanna Sörngård <jsorngard@gmail.com>"]
version = "0.8.5"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["const", "primes", "no_std", "prime-numbers"]
categories = ["mathematics", "no-std", "no-std::no-alloc", "algorithms"]
description = "Work with prime numbers in const contexts. Prime generation, primality testing, prime counting, and more."
repository = "https://github.com/JSorngard/const-primes/"

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
serde_arrays = { version = "0.1.0", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[features]
# Implements the `Error` trait from the standard library for the error types.
std = []
# Uses the inline `const` feature from Rust 1.79.0 to convert panics that only involve const generics into compile errors. Raises the MSRV of the crate to 1.79.0.
const_assert = []
# Derives the `Serialize` and `Deserialize` traits from [`serde`](https://crates.io/crates/serde) for the `Primes` struct, as well as a few others.
serde = ["dep:serde", "dep:serde_arrays"]

# docs.rs-specific configuration. Taken from <https://stackoverflow.com/a/61417700/>.
[package.metadata.docs.rs]
# Document all features.
all-features = true
# Enable the docsrs configuration attribute on docs.rs
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "prime_benches"
harness = false
