[package]
name = "const-primes"
authors = ["Johanna Sörngård <jsorngard@gmail.com>"]
version = "0.9.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["const", "primes", "no_std", "prime-numbers"]
categories = ["mathematics", "no-std", "no-std::no-alloc", "algorithms"]
description = "Work with prime numbers in const contexts. Prime generation, primality testing, prime counting, and more."
repository = "https://github.com/JSorngard/const-primes/"

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
serde_arrays = { version = "0.1.0", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = { version = "0.8", default-features = false, features = ["small_rng"] }

[features]
# Derives the `Serialize` and `Deserialize` traits from [`serde`](https://crates.io/crates/serde) for the `Primes` struct, as well as a few others.
# Uses the [`serde_arrays`](https://crates.io/crates/serde_arrays) crate to do this, and that crate uses the standard library.
serde = ["dep:serde", "dep:serde_arrays"]

[package.metadata.docs.rs]
# Document all features.
all-features = true

[[bench]]
name = "prime_benches"
harness = false
